# SCE

./: .gitignore  manage.py  pyproject.toml
carol/: settings.py  urls.py  wsgi.py
core/: admin.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/templates/: contato.html  index.html  produto.html
